// Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package daml.platform.v1;

option java_package = "com.daml.platform.v1";

// Describes the payload of a page token for listing users.
// Not intended to be handled directly by clients and should be presented to them as an opaque string.
message ListUsersPageTokenPayload {
  // Users are ordered by ``user_id``, and the next page starts with users whose ``user_id`` is larger than ``user_id_lower_bound_excl``.
  string user_id_lower_bound_excl = 1;
}

// Describes the payload of a page token for listing parties.
// Not intended to be handled directly by clients and should be presented to them as an opaque string.
message ListPartiesPageTokenPayload {
  // Parties are ordered by ``party_id``, and the next page starts with parties whose ``party_id`` is larger than ``party_id_lower_bound_excl``.
  string party_id_lower_bound_excl = 1;
}

// Describes the payload of a page token for listing vetted packages.
// Not intended to be handled directly by clients and should be presented to them as an opaque string.
message ListVettedPackagesPageTokenPayload {
  // VettedPackages are ordered by ``synchronizer_id`` and then
  // ``participant_id``. The next page starts with VettedPackages messages whose
  // synchronizer ID is strictly larger ``synchronizer_id``, or whose
  // synchronizer ID is equal to ``synchronizer_id`` and whose participant ID is
  // strictly larger than ``participant_id``.
  string synchronizer_id = 1;
  string participant_id = 2;
}
